# iterm-smartopen

./: pyproject.toml
src/iterm_smartopen/: main.py
